turn customerform into js
done

--- a/client/style.css
+++ b/client/style.css
@@ -171,3 +171,17 @@ button:hover {
   .form-hide {
     visibility: hidden;
   }
+
+
+  #customerRegForm {
+    color: black;
+  }
+
+  .form {
+    display: flex;
+    justify-content: center;
+  }
+
+  .inputContainer {
+    justify-content: center;
+  }
