--- a/client/style.css
+++ b/client/style.css
@@ -96,7 +96,7 @@ button:hover {
 
 /* Shopping cart */
 #main > div > h2 {
-    font-size: 3em;
+    font-size: 2em;
     text-align: center;
 }
 #main > div ul {
@@ -128,7 +128,7 @@ button:hover {
 
 #main > div div {
     text-align: center;
-    margin-bottom: 4em;
+    margin-bottom: 1em;
 }
 #main > div > h2 {
     margin-top: 1em;
@@ -184,4 +184,13 @@ button:hover {
 
   .inputContainer {
     justify-content: center;
+  }
+
+
+  #inputDiv {
+    margin-bottom: 0px
+  }
+
+  .customHeader {
+    font-size: 500px;
   }
