--- a/client/style.css
+++ b/client/style.css
@@ -1,219 +1,278 @@
 body {
-    font-family: Helvetica,Sans-serif;
-    margin: 0;
-    color: #FFF;
-    padding-top: 80px;
+  font-family: Helvetica, Sans-serif;
+  margin: 0;
+  color: #fff;
+  padding-top: 80px;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 1em 2em;
-    background-color: #212121;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 1em 2em;
+  background-color: #212121;
+  z-index: 1;
 }
 
 header h1 {
-    font-size: 2.5em;
-    display: inline-block;
-    margin: 0;
-    cursor: pointer;
+  font-size: 2.5em;
+  display: inline-block;
+  margin: 0;
+  cursor: pointer;
 }
 header h1:hover {
-    color: #5596F5;
+  color: #5596f5;
 }
 
 header a {
-    font-size: 2.5em;
-    float: right;
-    margin: 0;
-    cursor: pointer;
+  font-size: 2.5em;
+  float: right;
+  margin: 0;
+  cursor: pointer;
 }
 header a:hover {
-    color: #5596F5;
+  color: #5596f5;
 }
 
 #main {
-    color: #212121;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  color: #212121;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 li {
-    height: 90vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 1em;
-    background: linear-gradient(#fff, #F5F5F5);
+  height: 90vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 1em;
+  background: linear-gradient(#fff, #f5f5f5);
 }
 
 li h3 {
-    font-size: 3em;
-    margin: 0;
+  font-size: 3em;
+  margin: 0;
 }
 li img {
-    height: 55%;
-    width: auto;
+  height: 55%;
+  width: auto;
 }
 li span {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
 button {
-    font-size: 1.5em;
-    border: none;
-    border-radius: 8px;
-    padding: 0.5em 1em;
-    background: #5596F5;
-    color: #fff;
-    margin-top: 1em;
-    cursor: pointer;
+  font-size: 1.5em;
+  border: none;
+  border-radius: 8px;
+  padding: 0.5em 1em;
+  background: #5596f5;
+  color: #fff;
+  margin-top: 1em;
+  cursor: pointer;
 }
 button:hover {
-    background-color: #447CD0;
+  background-color: #447cd0;
 }
 
 @media (max-width: 640px) {
-    body {
-        padding-top: 60px;
-        font-size: 0.5em;
-    }
+  body {
+    padding-top: 60px;
+    font-size: 0.5em;
+  }
 }
 
 /* Shopping cart */
 #main > div > h2 {
-    font-size: 3em;
-    text-align: center;
+  font-size: 3em;
+  text-align: center;
 }
 #main > div ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 #main > div li {
-    font-size: 0.7em;
-    height: auto;
-    margin: 1em;
-    background: #F5F5F5;
-    border: 2px solid #447CD0;
-    border-radius: 10px;
+  font-size: 0.7em;
+  height: auto;
+  margin: 1em;
+  background: #f5f5f5;
+  border: 2px solid #447cd0;
+  border-radius: 10px;
 }
 #main > div li img {
-    height: 15em;
-    width: auto;
+  height: 15em;
+  width: auto;
 }
 #main > div li button {
-    background-color: #E64E4E;
+  background-color: #e64e4e;
 }
 #main > div li button:hover {
-    background-color: #E23D3D;
+  background-color: #e23d3d;
 }
 
 #main > div div {
-    text-align: center;
-    margin-bottom: 4em;
+  text-align: center;
+  margin-bottom: 4em;
 }
 #main > div > h2 {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
-
 .w3docs {
-    margin-left: 70px;
-    font-weight: bold;
-    text-align: left;
-    font-family: sans-serif, bold, Arial, Helvetica;
-    font-size: 14px;
-  }
-  .buttons {
-    display: flex;
-    align-items: center;
-    width: 100%;
-  }
-  div input {
-    margin-right: 10px;
-  }
-  form {
-    margin: 0 auto;
-    width: 300px;
-  }
-  form input {
-    padding: 10px;
-  }
-  form select {
-    background-color: #ffffff;
-    padding: 5px;
-  }
-  form label {
-    display: block;
-    width: 100%;
-    margin-bottom: 5px;
-  }
+  margin-left: 70px;
+  font-weight: bold;
+  text-align: left;
+  font-family: sans-serif, bold, Arial, Helvetica;
+  font-size: 14px;
+}
+.buttons {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+div input {
+  margin-right: 10px;
+}
+form {
+  margin: 0 auto;
+  width: 300px;
+}
+form input {
+  padding: 10px;
+}
+form select {
+  background-color: #ffffff;
+  padding: 5px;
+}
+form label {
+  display: block;
+  width: 100%;
+  margin-bottom: 5px;
+}
 
+.form-hide {
+  visibility: hidden;
+}
 
-  .form-hide {
-    visibility: hidden;
+#customerRegForm {
+  color: black;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.inputContainer {
+  justify-content: center;
+}
+
+.displayNone {
+  display: none;
+}
+
+#customerBtns {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#formNBtns {
+  display: flex;
+  justify-content: center;
+  gap: 200px;
+  color: black;
+  min-height: 200px;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+}
+
+h2 {
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-
-
-  #customerRegForm {
-    color: black;
+  to {
+    opacity: 1;
   }
+}
 
-  .form {
-    display: flex;
-    justify-content: center;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-
-  .inputContainer {
-    justify-content: center;
+  to {
+    opacity: 1;
   }
-
-  .displayNone {
-    display: none;
-  }
-
-  #customerBtns {
-    display: flex;
-    
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-  }
-
-  #formNBtns {
-    display: flex;
-    justify-content: center;
-    gap: 200px;
-    color: black;
-    min-height: 200px;
-  }
-  
-  #form {
-    display: flex;
-    flex-direction: column;
-
-  }
-
-  h2 {
-    margin-top: 5px;
-    margin-bottom: 15px;
-  }
+}
